// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emitted legacy CSS vars (behavior-preserving contract) > mint theme emits the frozen var set 1`] = `
{
  "--accent-bg": "rgba(0, 102, 204, 0.1)",
  "--accent-primary": "#1a6b4a",
  "--accent-text": "#1a6b4a",
  "--alert-caution": "#cf222e",
  "--alert-important": "#8250df",
  "--alert-note": "#0969da",
  "--alert-tip": "#1a7f37",
  "--alert-warning": "#9a6700",
  "--bg-color": "#CCE6D0",
  "--bg-secondary": "#b8d9bd",
  "--bg-tertiary": "#a8c9ad",
  "--block-bg-subtle": "rgba(0, 0, 0, 0.02)",
  "--block-bg-subtle-hover": "rgba(0, 0, 0, 0.04)",
  "--blur-text-color": "#c8c8c8",
  "--border-color": "#a8c9ad",
  "--code-bg-color": "#b8d9bd",
  "--code-border-color": "#a8c9ad",
  "--code-text-color": "#1a1a1a",
  "--contrast-text": "white",
  "--emphasis-color": "#6b4423",
  "--error-bg": "#ffebe9",
  "--error-color": "#cf222e",
  "--error-color-hover": "#b91c1c",
  "--highlight-bg": "#fff3a3",
  "--highlight-text": "inherit",
  "--hover-bg": "rgba(0, 0, 0, 0.04)",
  "--hover-bg-strong": "rgba(0, 0, 0, 0.08)",
  "--md-char-color": "#777777",
  "--meta-content-color": "#777777",
  "--primary-color": "#1a6b4a",
  "--selection-color": "rgba(0, 102, 204, 0.2)",
  "--sidebar-bg": "#b8d9bd",
  "--source-mode-bg": "rgba(0, 0, 0, 0.02)",
  "--strong-color": "#1a5c4a",
  "--subtle-bg": "rgba(0, 0, 0, 0.02)",
  "--subtle-bg-hover": "rgba(0, 0, 0, 0.03)",
  "--success-color": "#16a34a",
  "--success-color-hover": "#15803d",
  "--table-border-color": "#a8c9ad",
  "--text-color": "#2d3a35",
  "--text-secondary": "#666666",
  "--text-tertiary": "#999999",
  "--warning-bg": "rgba(245, 158, 11, 0.1)",
  "--warning-bg-active": "rgba(245, 158, 11, 0.2)",
  "--warning-bg-hover": "rgba(245, 158, 11, 0.15)",
  "--warning-border": "rgba(245, 158, 11, 0.3)",
  "--warning-color": "#9a6700",
}
`;

exports[`emitted legacy CSS vars (behavior-preserving contract) > night theme emits the frozen var set 1`] = `
{
  "--accent-bg": "rgba(90, 168, 255, 0.12)",
  "--accent-primary": "#58a6ff",
  "--accent-text": "#58a6ff",
  "--alert-caution": "#f85149",
  "--alert-important": "#a371f7",
  "--alert-note": "#58a6ff",
  "--alert-tip": "#3fb950",
  "--alert-warning": "#d29922",
  "--bg-color": "#23262b",
  "--bg-secondary": "#2a2e34",
  "--bg-tertiary": "#32363d",
  "--block-bg-subtle": "rgba(255, 255, 255, 0.03)",
  "--block-bg-subtle-hover": "rgba(255, 255, 255, 0.05)",
  "--blur-text-color": "#6b7078",
  "--border-color": "#3a3f46",
  "--code-bg-color": "#2a2e34",
  "--code-border-color": "#3a3f46",
  "--code-text-color": "#d1d5db",
  "--emphasis-color": "#d19a66",
  "--error-bg": "rgba(248, 81, 73, 0.15)",
  "--error-color": "#f85149",
  "--error-color-hover": "#fca5a5",
  "--highlight-bg": "#5c5c00",
  "--highlight-text": "#fff3a3",
  "--md-char-color": "#7aa874",
  "--meta-content-color": "#7aa874",
  "--primary-color": "#58a6ff",
  "--selection-color": "rgba(90, 168, 255, 0.22)",
  "--sidebar-bg": "#2a2e34",
  "--source-mode-bg": "rgba(255, 255, 255, 0.02)",
  "--strong-color": "#6cb6ff",
  "--success-color": "#4ade80",
  "--success-color-hover": "#86efac",
  "--table-border-color": "#3a3f46",
  "--text-color": "#d6d9de",
  "--text-secondary": "#9aa0a6",
  "--text-tertiary": "#6b7078",
}
`;

exports[`emitted legacy CSS vars (behavior-preserving contract) > paper theme emits the frozen var set 1`] = `
{
  "--accent-bg": "rgba(0, 102, 204, 0.1)",
  "--accent-primary": "#0066cc",
  "--accent-text": "#0066cc",
  "--alert-caution": "#cf222e",
  "--alert-important": "#8250df",
  "--alert-note": "#0969da",
  "--alert-tip": "#1a7f37",
  "--alert-warning": "#9a6700",
  "--bg-color": "#EEEDED",
  "--bg-secondary": "#e5e4e4",
  "--bg-tertiary": "#d5d4d4",
  "--block-bg-subtle": "rgba(0, 0, 0, 0.02)",
  "--block-bg-subtle-hover": "rgba(0, 0, 0, 0.04)",
  "--blur-text-color": "#c8c8c8",
  "--border-color": "#d5d4d4",
  "--code-bg-color": "#e5e4e4",
  "--code-border-color": "#d5d4d4",
  "--code-text-color": "#1a1a1a",
  "--contrast-text": "white",
  "--emphasis-color": "#5b0411",
  "--error-bg": "#ffebe9",
  "--error-color": "#cf222e",
  "--error-color-hover": "#b91c1c",
  "--highlight-bg": "#fff3a3",
  "--highlight-text": "inherit",
  "--hover-bg": "rgba(0, 0, 0, 0.04)",
  "--hover-bg-strong": "rgba(0, 0, 0, 0.08)",
  "--md-char-color": "#777777",
  "--meta-content-color": "#777777",
  "--primary-color": "#0066cc",
  "--selection-color": "rgba(0, 102, 204, 0.2)",
  "--sidebar-bg": "#e5e4e4",
  "--source-mode-bg": "rgba(0, 0, 0, 0.02)",
  "--strong-color": "#3f5663",
  "--subtle-bg": "rgba(0, 0, 0, 0.02)",
  "--subtle-bg-hover": "rgba(0, 0, 0, 0.03)",
  "--success-color": "#16a34a",
  "--success-color-hover": "#15803d",
  "--table-border-color": "#d5d4d4",
  "--text-color": "#1a1a1a",
  "--text-secondary": "#666666",
  "--text-tertiary": "#999999",
  "--warning-bg": "rgba(245, 158, 11, 0.1)",
  "--warning-bg-active": "rgba(245, 158, 11, 0.2)",
  "--warning-bg-hover": "rgba(245, 158, 11, 0.15)",
  "--warning-border": "rgba(245, 158, 11, 0.3)",
  "--warning-color": "#9a6700",
}
`;

exports[`emitted legacy CSS vars (behavior-preserving contract) > sepia theme emits the frozen var set 1`] = `
{
  "--accent-bg": "rgba(0, 102, 204, 0.1)",
  "--accent-primary": "#8b4513",
  "--accent-text": "#8b4513",
  "--alert-caution": "#cf222e",
  "--alert-important": "#8250df",
  "--alert-note": "#0969da",
  "--alert-tip": "#1a7f37",
  "--alert-warning": "#9a6700",
  "--bg-color": "#F9F0DB",
  "--bg-secondary": "#f0e5cc",
  "--bg-tertiary": "#e0d5bc",
  "--block-bg-subtle": "rgba(0, 0, 0, 0.02)",
  "--block-bg-subtle-hover": "rgba(0, 0, 0, 0.04)",
  "--blur-text-color": "#c8c8c8",
  "--border-color": "#e0d5bc",
  "--code-bg-color": "#f0e5cc",
  "--code-border-color": "#e0d5bc",
  "--code-text-color": "#1a1a1a",
  "--contrast-text": "white",
  "--emphasis-color": "#8b3a2f",
  "--error-bg": "#ffebe9",
  "--error-color": "#cf222e",
  "--error-color-hover": "#b91c1c",
  "--highlight-bg": "#fff3a3",
  "--highlight-text": "inherit",
  "--hover-bg": "rgba(0, 0, 0, 0.04)",
  "--hover-bg-strong": "rgba(0, 0, 0, 0.08)",
  "--md-char-color": "#777777",
  "--meta-content-color": "#777777",
  "--primary-color": "#8b4513",
  "--selection-color": "rgba(0, 102, 204, 0.2)",
  "--sidebar-bg": "#f0e5cc",
  "--source-mode-bg": "rgba(0, 0, 0, 0.02)",
  "--strong-color": "#4a3728",
  "--subtle-bg": "rgba(0, 0, 0, 0.02)",
  "--subtle-bg-hover": "rgba(0, 0, 0, 0.03)",
  "--success-color": "#16a34a",
  "--success-color-hover": "#15803d",
  "--table-border-color": "#e0d5bc",
  "--text-color": "#5c4b37",
  "--text-secondary": "#666666",
  "--text-tertiary": "#999999",
  "--warning-bg": "rgba(245, 158, 11, 0.1)",
  "--warning-bg-active": "rgba(245, 158, 11, 0.2)",
  "--warning-bg-hover": "rgba(245, 158, 11, 0.15)",
  "--warning-border": "rgba(245, 158, 11, 0.3)",
  "--warning-color": "#9a6700",
}
`;

exports[`emitted legacy CSS vars (behavior-preserving contract) > solarized theme emits the frozen var set 1`] = `
{
  "--accent-bg": "rgba(38, 139, 210, 0.14)",
  "--accent-primary": "#268bd2",
  "--accent-text": "#268bd2",
  "--alert-caution": "#dc322f",
  "--alert-important": "#6c71c4",
  "--alert-note": "#268bd2",
  "--alert-tip": "#859900",
  "--alert-warning": "#b58900",
  "--bg-color": "#002b36",
  "--bg-secondary": "#073642",
  "--bg-tertiary": "#0a3a47",
  "--block-bg-subtle": "rgba(255, 255, 255, 0.03)",
  "--block-bg-subtle-hover": "rgba(255, 255, 255, 0.05)",
  "--blur-text-color": "#586e75",
  "--border-color": "#0e4753",
  "--code-bg-color": "#073642",
  "--code-border-color": "#0e4753",
  "--code-text-color": "#93a1a1",
  "--emphasis-color": "#cb9b6e",
  "--error-bg": "rgba(220, 50, 47, 0.15)",
  "--error-color": "#dc322f",
  "--error-color-hover": "#e15a57",
  "--highlight-bg": "#4a4a00",
  "--highlight-text": "#fdf6e3",
  "--md-char-color": "#859900",
  "--meta-content-color": "#859900",
  "--primary-color": "#268bd2",
  "--selection-color": "rgba(38, 139, 210, 0.22)",
  "--sidebar-bg": "#073642",
  "--source-mode-bg": "rgba(255, 255, 255, 0.02)",
  "--strong-color": "#6c9ec9",
  "--success-color": "#859900",
  "--success-color-hover": "#a0b200",
  "--table-border-color": "#0e4753",
  "--text-color": "#93a1a1",
  "--text-secondary": "#839496",
  "--text-tertiary": "#586e75",
}
`;

exports[`emitted legacy CSS vars (behavior-preserving contract) > white theme emits the frozen var set 1`] = `
{
  "--accent-bg": "rgba(0, 102, 204, 0.1)",
  "--accent-primary": "#0066cc",
  "--accent-text": "#0066cc",
  "--alert-caution": "#cf222e",
  "--alert-important": "#8250df",
  "--alert-note": "#0969da",
  "--alert-tip": "#1a7f37",
  "--alert-warning": "#9a6700",
  "--bg-color": "#FFFFFF",
  "--bg-secondary": "#f8f8f8",
  "--bg-tertiary": "#eeeeee",
  "--block-bg-subtle": "rgba(0, 0, 0, 0.02)",
  "--block-bg-subtle-hover": "rgba(0, 0, 0, 0.04)",
  "--blur-text-color": "#c8c8c8",
  "--border-color": "#eeeeee",
  "--code-bg-color": "#f8f8f8",
  "--code-border-color": "#eeeeee",
  "--code-text-color": "#1a1a1a",
  "--contrast-text": "white",
  "--emphasis-color": "#5b0411",
  "--error-bg": "#ffebe9",
  "--error-color": "#cf222e",
  "--error-color-hover": "#b91c1c",
  "--highlight-bg": "#fff3a3",
  "--highlight-text": "inherit",
  "--hover-bg": "rgba(0, 0, 0, 0.04)",
  "--hover-bg-strong": "rgba(0, 0, 0, 0.08)",
  "--md-char-color": "#777777",
  "--meta-content-color": "#777777",
  "--primary-color": "#0066cc",
  "--selection-color": "rgba(0, 102, 204, 0.2)",
  "--sidebar-bg": "#f8f8f8",
  "--source-mode-bg": "rgba(0, 0, 0, 0.02)",
  "--strong-color": "#3f5663",
  "--subtle-bg": "rgba(0, 0, 0, 0.02)",
  "--subtle-bg-hover": "rgba(0, 0, 0, 0.03)",
  "--success-color": "#16a34a",
  "--success-color-hover": "#15803d",
  "--table-border-color": "#eeeeee",
  "--text-color": "#1a1a1a",
  "--text-secondary": "#666666",
  "--text-tertiary": "#999999",
  "--warning-bg": "rgba(245, 158, 11, 0.1)",
  "--warning-bg-active": "rgba(245, 158, 11, 0.2)",
  "--warning-bg-hover": "rgba(245, 158, 11, 0.15)",
  "--warning-border": "rgba(245, 158, 11, 0.3)",
  "--warning-color": "#9a6700",
}
`;
